--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ $(document).on("change", "#load_video", function(evt) {
   elements.each(function() {
   
   $(this).css({
-    'resize': 'none',
-    'overflow': 'scroll' // Bloquer les dimensions et masquer le contenu débordant avec CSS
+    'resize': 'none'
+    //'overflow': 'scroll' // Bloquer les dimensions et masquer le contenu débordant avec CSS
   });
 
     $(this).on('resize', function(event) {
